--- a/yield/src/app/app.component.html
+++ b/yield/src/app/app.component.html
@@ -1,27 +1,8 @@
-<div class="flex flex-col h-screen bg-slate-100 items-center ">
+<!-- COlOR PALLETE : FBF9F9, DEB465, 9DACC6, A87260 , 4B4664  -->
+<div class="relative flex-col h-screen bg-slate-100 items-center ">
 
   <!-- Nav / Top Bar -->
-  <nav class="bg-slate-300 w-screen">
-    <h1 class="text-3xl font-bold underline">
-      This is the logo space
-    </h1>
-    <ul>
-      <li>Login</li>
-      <li>Signup</li>
-    </ul>
-  </nav>
-
-  <!-- Section for uploading  -->
-  <section class="bg-slate-500 w-screen">
-    <label>
-      the upload input box
-    </label>
-    <div>
-      <input type="file" value="Drop .csv file here ..." />
-      <input type="button" value="Upload" />
-    </div>
-    <input type="file" />
-  </section>
+  <app-top-bar></app-top-bar>
 
   <!-- Section for charts -->
   <section class="bg-slate-700 w-screen">
@@ -33,26 +14,39 @@
     </article>
   </section>
 
+
+  <!-- Section for uploading  -->
+  <section class="w-screen">
+    <label>
+      the upload input box
+    </label>
+    <div class="flex justify-center gap-1 items-center">
+      <input class="bg-[#FBF9F9] w-2/6 p-2" type="file" placeholder="Drop .csv file here ..." />
+      <input class="bg-[#DEB465] text-white uppercase py-2 px-8" type="button" value="Upload" />
+    </div>
+  </section>
+
+
   <!-- Section for table displaying trades -->
   <section class="bg-slate-900 w-screen justify-center items-center">
     <table>
       <caption>for the trade history table</caption>
       <thead>
         <tr>
-          <th>header col 1</th>
-          <th>header col 2</th>
-          <th>header col 3</th>
-          <th>header col 4</th>
-          <th>header col 5</th>
+          <th>h-col 1</th>
+          <th>h-col 2</th>
+          <th>h-col 3</th>
+          <th>h-col 4</th>
+          <th>h-col 5</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>Row 1</td>
-          <td>Row 2</td>
-          <td>Row 3</td>
-          <td>Row 4</td>
-          <td>Row 5</td>
+          <td>col 1</td>
+          <td>col 2</td>
+          <td>col 3</td>
+          <td>col 4</td>
+          <td>col 5</td>
         </tr>
       </tbody>
       <tfoot>
