Add and position charts

--- a/yield/src/app/app.component.html
+++ b/yield/src/app/app.component.html
@@ -5,15 +5,7 @@
   <app-top-bar></app-top-bar>
 
   <!-- Section for charts -->
-  <section class="bg-slate-700 w-screen">
-    <article>
-      <label>This is for the left info or chart</label>
-    </article>
-    <article>
-      <label>This is for the right info or chart</label>
-    </article>
-  </section>
-
+  <app-analytic></app-analytic>
 
   <!-- Section for uploading  -->
   <section class="w-screen">
