Add modal action to edit btn

--- a/yield/src/app/app.component.html
+++ b/yield/src/app/app.component.html
@@ -4,6 +4,9 @@
   <!-- Nav / Top Bar -->
   <app-top-bar class="z-50"></app-top-bar>
 
+  <!-- Section for info / summary data -->
+  
+
   <!-- Section for charts -->
   <app-analytic class="w-full"></app-analytic>
 
