added cards for the market-result-panel

--- a/yield/src/app/app.component.html
+++ b/yield/src/app/app.component.html
@@ -1,17 +1,17 @@
 <!-- COlOR PALLETE : FBF9F9, DEB465, 9DACC6, A87260 , 4B4664, F9FBFB -->
-<div class="relative flex-col h-screen bg-slate-100 items-center ">
+<div class="relative w-full flex-col h-screen bg-slate-100 items-center overflow-y-auto ">
 
   <!-- Nav / Top Bar -->
   <app-top-bar class="z-50"></app-top-bar>
 
   <!-- Section for info / summary data -->
-  
+  <app-market-result class=""></app-market-result>
 
   <!-- Section for charts -->
-  <app-analytic class="w-full"></app-analytic>
+  <app-analytic class=""></app-analytic>
 
   <!-- Section for uploading  -->
-  <app-data-table class="w-full"></app-data-table>
+  <app-data-table class=""></app-data-table>
 
   <footer>
     @Copyright 2023
