user can register and login

--- a/yield/src/app/analytic/analytic.component.html
+++ b/yield/src/app/analytic/analytic.component.html
@@ -1,7 +1,7 @@
-<section class="inline-flex items-center w-screen gap-8">
+<section class="inline-flex items-center w-full gap-8">
 
   <app-panel-left class="flex-1 p-8"></app-panel-left>
 
-  <app-panel-right class="flex-2 px-8 py-8"></app-panel-right>
+  <app-panel-right class="flex-3 px-8 py-8"></app-panel-right>
 
 </section>
