--- a/yield/src/app/analytic/panel-left/panel-left.component.html
+++ b/yield/src/app/analytic/panel-left/panel-left.component.html
@@ -1,23 +1,21 @@
-<!-- <div class="flex-1"> -->
 <canvas baseChart class="chart"
         [data]="lineChartData"
         [options]="lineChartOptions"
         [type]="lineChartType"
         (chartHover)="chartHovered($event)"
         (chartClick)="chartClicked($event)"></canvas>
-<table>
+<table class="w-full text-sm text-left text-gray-500 overflow-hidden">
   <tr>
     <th *ngFor="let label of lineChartData.labels">{{label}}</th>
   </tr>
-  <tr *ngFor="let d of lineChartData.datasets; let i=index" [class]="'line-'+i">
-    <td *ngFor="let label of lineChartData.labels; let j=index">{{d && d.data[j]}}</td>
+  <tr class="" *ngFor="let d of lineChartData.datasets; let i=index" [class]="'line-'+i">
+    <td class="" *ngFor="let label of lineChartData.labels; let j=index">{{d && d.data[j]}}</td>
   </tr>
 </table>
-<div class="button-row">
-  <button mat-button mat-raised-button color="primary" (click)="randomize()">Randomize</button>
-  <button mat-button mat-raised-button color="primary" (click)="pushOne()">Push</button>
-  <button mat-button mat-raised-button color="primary" (click)="changeColor()">Recolor</button>
-  <button mat-button mat-raised-button color="primary" (click)="hideOne()">Toggle Series B</button>
-  <button mat-button mat-raised-button color="primary" (click)="changeLabel()">Change Label</button>
+<div class="inline-flex rounded-md shadow-sm justify-start w-full mt-4" role="group">
+  <button class="px-4 py-2 text-sm font-medium text-gray-900 bg-transparent border border-gray-900 rounded-l-lg hover:bg-gray-900 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white" (click)="randomize()">Randomize</button>
+  <button class="px-4 py-2 text-sm font-medium text-gray-900 bg-transparent border border-gray-900 rounded-l-lg hover:bg-gray-900 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white" (click)="pushOne()">Push</button>
+  <button class="px-4 py-2 text-sm font-medium text-gray-900 bg-transparent border border-gray-900 rounded-l-lg hover:bg-gray-900 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white" (click)="changeColor()">Recolor</button>
+  <button class="px-4 py-2 text-sm font-medium text-gray-900 bg-transparent border border-gray-900 rounded-l-lg hover:bg-gray-900 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white" (click)="hideOne()">Toggle Series B</button>
+  <button class="px-4 py-2 text-sm font-medium text-gray-900 bg-transparent border border-gray-900 rounded-l-lg hover:bg-gray-900 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white" (click)="changeLabel()">Change Label</button>
 </div>
-<!-- </div> -->
