--- a/yield/src/app/market-result/market-result.component.html
+++ b/yield/src/app/market-result/market-result.component.html
@@ -6,10 +6,15 @@
   </a>
 
   <a href="#" class="w-1/3 min-h-[164px] max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100">
-    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Result Summary</h5>
-    <p class="font-normal text-gray-700 ">Market Summary Data</p>
+    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Profit & Loss Summary</h5>
+    <p class="font-normal text-gray-700 ">Profit & Loss Summary Data</p>
   </a>
   
+  <a href="#" class="w-1/3 min-h-[164px] max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100">
+    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Frequency Summary</h5>
+    <p class="font-normal text-gray-700 ">Frequency Summary Data</p>
+  </a>
+
   <a href="#" class="w-1/3 min-h-[164px] max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100">
     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Trade Summary</h5>
     <p class="font-normal text-gray-700 ">Trade Summary Data</p>
