--- a/yield/src/app/data-table/data-table.component.html
+++ b/yield/src/app/data-table/data-table.component.html
@@ -1,25 +1,62 @@
 
 
 <!-- Section for table displaying trades -->
-<section class="shadow-md sm:rounded-lg">
-  <table class="w-full text-sm text-left text-gray-500 overflow-hidden">
-    <thead class="text-xs text-gray-500 uppercase bg-[#9DACC6]">
+  <table class="table-trade">
+    <thead class="table-trade-header">
       <tr>
         <th scope="col" class="p-4">
           <div class="flex items-center">
-            <input id="checkbox-all-search" type="checkbox"
-                   class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-            <label for="checkbox-all-search" class="sr-only">checkbox</label>
+            <input id="checkbox-all" type="checkbox" class="table-trade-checkbox">
+            <label for="checkbox-all" class="sr-only">checkbox</label>
           </div>
         </th>
         <th scope="col" class="px-6 py-3">
-          Asset Pair
+          <label for="countries" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Column 1 identfier</label>
+          <select id="countries" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1">
+            <option selected>Choose an option</option>
+            <option value="assetPair">Asset Pair</option>
+            <option value="assetPairValue">Asset Pair Value</option>
+            <option value="boughtDate">Bought Date</option>
+            <option value="boughtQty">Bought Qty</option>
+            <option value="boughtValue">Bought Value</option>
+            <option value="boughtFee">Bought Fee</option>
+            <option value="soldDate">Sold Date</option>
+            <option value="soldQty">Sold Qty</option>
+            <option value="soldValue">Sold Value</option>
+            <option value="soldFee">Sold Fee</option>
+          </select>
         </th>
         <th scope="col" class="px-6 py-3">
-          Asset Pair Value
+          <label for="countries" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Column 2 identfier</label>
+          <select id="countries" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1">
+            <option selected>Choose an option</option>
+            <option value="assetPair">Asset Pair</option>
+            <option value="assetPairValue">Asset Pair Value</option>
+            <option value="boughtDate">Bought Date</option>
+            <option value="boughtQty">Bought Qty</option>
+            <option value="boughtValue">Bought Value</option>
+            <option value="boughtFee">Bought Fee</option>
+            <option value="soldDate">Sold Date</option>
+            <option value="soldQty">Sold Qty</option>
+            <option value="soldValue">Sold Value</option>
+            <option value="soldFee">Sold Fee</option>
+          </select>
         </th>
         <th scope="col" class="px-6 py-3">
-          Bought Date
+          <label for="countries" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Column 3 identfier</label>
+          <select id="countries" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1">
+            <option selected>Choose an option</option>
+            <option value="assetPair">Asset Pair</option>
+            <option value="assetPairValue">Asset Pair Value</option>
+            <option value="boughtDate">Bought Date</option>
+            <option value="boughtQty">Bought Qty</option>
+            <option value="boughtValue">Bought Value</option>
+            <option value="boughtFee">Bought Fee</option>
+            <option value="soldDate">Sold Date</option>
+            <option value="soldQty">Sold Qty</option>
+            <option value="soldValue">Sold Value</option>
+            <option value="soldFee">Sold Fee</option>
+          </select>
         </th>
         <th scope="col" class="px-6 py-3">
           Bought Qty
@@ -54,9 +91,8 @@
       <tr class="bg-[#F9FBFB] border-b-2 hover:bg-[#DEB465]">
         <td class="w-4 p-4">
           <div class="flex items-center">
-            <input id="checkbox-table-search-1" type="checkbox"
-                   class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500">
-            <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
+            <input id="checkbox-table-1" type="checkbox" class="table-trade-checkbox">
+            <label for="checkbox-table-1" class="sr-only">checkbox</label>
           </div>
         </td>
         <th scope="row" class="px-6 py-1 font-semibold whitespace-nowrap">
@@ -93,16 +129,14 @@
           $ 30.32
         </td>
         <td class="px-6 py-1">
-          <a href="#" type="button" (click)="toggleModal()"
-             class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+          <a href="#" type="button" (click)="toggleEditModal()" class="table-trade-edit-btn">Edit</a>
         </td>
       </tr>
       <tr class="bg-[#F9FBFB] border-b-2 hover:bg-[#DEB465]">
         <td class="w-4 p-4">
           <div class="flex items-center">
-            <input id="checkbox-table-search-1" type="checkbox"
-                   class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500">
-            <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
+            <input id="checkbox-table-1" type="checkbox" class="table-trade-checkbox">
+            <label for="checkbox-table-1" class="sr-only">checkbox</label>
           </div>
         </td>
         <th scope="row" class="px-6 py-1 font-semibold whitespace-nowrap">
@@ -139,16 +173,14 @@
           $ 30.32
         </td>
         <td class="px-6 py-1">
-          <a href="#" type="button" (click)="toggleModal()"
-             class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+          <a href="#" type="button" (click)="toggleEditModal()" class="table-trade-edit-btn">Edit</a>
         </td>
       </tr>
       <tr class="bg-[#F9FBFB] border-b-2 hover:bg-[#DEB465]">
         <td class="w-4 p-4">
           <div class="flex items-center">
-            <input id="checkbox-table-search-1" type="checkbox"
-                   class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500">
-            <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
+            <input id="checkbox-table-1" type="checkbox" class="table-trade-checkbox">
+            <label for="checkbox-table-1" class="sr-only">checkbox</label>
           </div>
         </td>
         <th scope="row" class="px-6 py-1 font-semibold whitespace-nowrap">
@@ -185,154 +217,14 @@
           $ 30.32
         </td>
         <td class="px-6 py-1">
-          <a href="#" type="button" (click)="toggleModal()"
-             class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+          <a href="#" type="button" (click)="toggleEditModal()" class="table-trade-edit-btn">Edit</a>
         </td>
       </tr>
-      <tr class="bg-[#F9FBFB] border-b-2 hover:bg-[#DEB465]">
-        <td class="w-4 p-4">
-          <div class="flex items-center">
-            <input id="checkbox-table-search-1" type="checkbox"
-                   class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500">
-            <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
-          </div>
-        </td>
-        <th scope="row" class="px-6 py-1 font-semibold whitespace-nowrap">
-          ADA / USD
-        </th>
-        <td class="px-6 py-1">
-          $ 1.00
-        </td>
-        <td class="px-6 py-1">
-          05-30-2022
-        </td>
-        <td class="px-6 py-1">
-          $ 832
-        </td>
-        <td class="px-6 py-1">
-          $ 832.0832
-        </td>
-        <td class="px-6 py-1">
-          $ 0.0832
-        </td>
-        <td class="px-6 py-1">
-          05-31-2022
-        </td>
-        <td class="px-6 py-1">
-          $ 832
-        </td>
-        <td class="px-6 py-1">
-          $ 862.32
-        </td>
-        <td class="px-6 py-1">
-          $ 0.0832
-        </td>
-        <td class="px-6 py-1">
-          $ 30.32
-        </td>
-        <td class="px-6 py-1">
-          <a href="#" type="button" (click)="toggleModal()"
-             class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-        </td>
-      </tr>
-      <tr class="bg-[#F9FBFB] border-b-2 hover:bg-[#DEB465]">
-        <td class="w-4 p-4">
-          <div class="flex items-center">
-            <input id="checkbox-table-search-1" type="checkbox"
-                   class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500">
-            <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
-          </div>
-        </td>
-        <th scope="row" class="px-6 py-1 font-semibold whitespace-nowrap">
-          ADA / USD
-        </th>
-        <td class="px-6 py-1">
-          $ 1.00
-        </td>
-        <td class="px-6 py-1">
-          05-30-2022
-        </td>
-        <td class="px-6 py-1">
-          $ 832
-        </td>
-        <td class="px-6 py-1">
-          $ 832.0832
-        </td>
-        <td class="px-6 py-1">
-          $ 0.0832
-        </td>
-        <td class="px-6 py-1">
-          05-31-2022
-        </td>
-        <td class="px-6 py-1">
-          $ 832
-        </td>
-        <td class="px-6 py-1">
-          $ 862.32
-        </td>
-        <td class="px-6 py-1">
-          $ 0.0832
-        </td>
-        <td class="px-6 py-1">
-          $ 30.32
-        </td>
-        <td class="px-6 py-1">
-          <a href="#" type="button" (click)="toggleModal()"
-             class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-        </td>
-      </tr>
-      <tr class="bg-[#F9FBFB] border-b-2 hover:bg-[#DEB465]">
-        <td class="w-4 p-4">
-          <div class="flex items-center">
-            <input id="checkbox-table-search-1" type="checkbox"
-                   class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500">
-            <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
-          </div>
-        </td>
-        <th scope="row" class="px-6 py-1 font-semibold whitespace-nowrap">
-          ADA / USD
-        </th>
-        <td class="px-6 py-1">
-          $ 1.00
-        </td>
-        <td class="px-6 py-1">
-          05-30-2022
-        </td>
-        <td class="px-6 py-1">
-          $ 832
-        </td>
-        <td class="px-6 py-1">
-          $ 832.0832
-        </td>
-        <td class="px-6 py-1">
-          $ 0.0832
-        </td>
-        <td class="px-6 py-1">
-          05-31-2022
-        </td>
-        <td class="px-6 py-1">
-          $ 832
-        </td>
-        <td class="px-6 py-1">
-          $ 862.32
-        </td>
-        <td class="px-6 py-1">
-          $ 0.0832
-        </td>
-        <td class="px-6 py-1">
-          $ 30.32
-        </td>
-        <td class="px-6 py-1">
-          <a href="#" type="button" (click)="toggleModal()"
-             class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-        </td>
-      </tr>
+
     </tbody>
   </table>
-  <nav class="flex items-center justify-between pt-4" aria-label="Table navigation">
-    <span class="text-sm font-normal text-gray-500">Showing <span
-            class="font-semibold text-[#9DACC6]">1-10</span> of <span
-            class="font-semibold text-[#9DACC6]">100</span></span>
+  <nav class="table-trade-footer" >
+    <span class="table-footer-text">Showing 1-3 of 100</span>
     <ul class="inline-flex items-center -space-x-px">
       <li>
         <a href="#"
@@ -380,7 +272,7 @@
       </li>
     </ul>
   </nav>
-</section>
+
 
 <div *ngIf="showModal"
      class="overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none justify-center items-center flex">
@@ -393,7 +285,7 @@
           Modal Title
         </h3>
         <button class="p-1 ml-auto bg-transparent border-0 text-black opacity-5 float-right text-3xl leading-none font-semibold outline-none focus:outline-none"
-                (click)="toggleModal()">
+                (click)="toggleEditModal()">
           <span class="bg-transparent text-black opacity-5 h-6 w-6 text-2xl block outline-none focus:outline-none">
             ×
           </span>
@@ -412,11 +304,11 @@
       <!--footer-->
       <div class="flex items-center justify-end p-6 border-t border-solid border-slate-200 rounded-b">
         <button class="text-red-500 background-transparent font-bold uppercase px-6 py-2 text-sm outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150"
-                type="button" (click)="toggleModal()">
+                type="button" (click)="toggleEditModal()">
           Close
         </button>
         <button class="bg-emerald-500 text-white active:bg-emerald-600 font-bold uppercase text-sm px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150"
-                type="button" (click)="toggleModal()">
+                type="button" (click)="toggleEditModal()">
           Save Changes
         </button>
       </div>
