--- a/yield/src/app/app.component.html
+++ b/yield/src/app/app.component.html
@@ -1,39 +1,51 @@
 <!-- COlOR PALLETE : FBF9F9, DEB465, 9DACC6, A87260 , 4B4664, F9FBFB -->
-<div class="relative w-full flex-col h-screen bg-slate-100 items-center overflow-y-auto ">
+<section class="app-wrapper">
 
   <!-- Nav / Top Bar -->
   <app-top-bar class="z-50"></app-top-bar>
 
   <!-- Action bar for performing actions, e.g. upload file, submit trades i.e save, clearing table, fetching historical -->
+  <caption class="block text-2xl pt-8">Upload a trade file in .csv format to view report options</caption>
   <div class="action-container">
-    <form class="action-input-group">
-      <input class="action-input " aria-describedby="file_input_help" type="file">
-      <label class="px-4 py-2 text-sm font-medium text-gray-900 " for="file_input">Upload file (.csv) </label>
+    <form class="action-input-group-center">
+      <input class="action-input" type="file">
+      <button class="action-input-btn">Upload</button>
     </form>
 
     <!-- HIDE BUTTON GROUP; ONLY SHOW AFTER FILE HAS BEEN UPLOADED -->
-    <div class="action-btn-group">
-      <button class="action-btn">line chart</button>
-      <button class="action-btn">bar chart</button>
-      <button class="action-btn">market</button>
-      <button class="action-btn">profit & loss</button>
-      <button class="action-btn">frequency</button>
-      <button class="action-btn">trade</button>
-      <button class="action-btn">save</button>
-    </div>
+    <ng-container *ngIf="true">
+      <div class="action-btn-group">
+        <button class="action-btn" (click)="toggleLineChart()">line chart</button>
+        <button class="action-btn" (click)="toggleBarChart()">bar chart</button>
+        <button class="action-btn" (click)="toggleMarketCard()">market</button>
+        <button class="action-btn" (click)="toggleProfitLossCard()">profit & loss</button>
+        <button class="action-btn" (click)="toggleFrequencyCard()">frequency</button>
+        <button class="action-btn" (click)="toggleTradeCard()">trade</button>
+        <button class="action-btn" (click)="saveTrades()">save trades</button>
+      </div>
+    </ng-container>
   </div>
 
   <!-- Section for info / summary data -->
-  <!-- <app-market-result class=""></app-market-result> -->
+  <app-market-result 
+    [showMarketCard]="showMarketCard"
+    [showProfitLossCard]="showProfitLossCard"
+    [showFrequencyCard]="showFrequencyCard"
+    [showTradeCard]="showTradeCard" 
+    class=""></app-market-result>
 
   <!-- Section for charts -->
-  <!-- <app-analytic class=""></app-analytic> -->
+  <app-analytic 
+    [showLineChart]="showLineChart"
+    [showBarChart]="showBarChart" class=""></app-analytic>
 
-  <!-- Section for uploading  -->
-  <!-- <app-data-table class=""></app-data-table> -->
+  <!-- Section for uploading / show after file is uploaded -->
+  <app-data-table 
+    [showDataTable]="showDataTable"
+    class=""></app-data-table>
 
-  <footer>
-    @Copyright 2023
+  <footer class="app-footer">
+    <span class="">Yield | @Copyright 2023</span>
   </footer>
 
-</div> 
+</section> 
