--- a/yield/src/app/market-result/market-result.component.html
+++ b/yield/src/app/market-result/market-result.component.html
@@ -1,24 +1,31 @@
 <section class="inline-flex items-center justify-evenly py-4 gap-4 w-full">
-  
-  <a href="#" class="w-1/3 min-h-[164px] max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100">
-    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Market Summary</h5>
-    <p class="font-normal text-gray-700 ">Market Summary Data</p>
-  </a>
+  <ng-container *ngIf="showMarketCard">
+    <a href="#" class="w-1/3 min-h-[164px] max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100">
+      <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Market Summary</h5>
+      <p class="font-normal text-gray-700 ">Market Summary Data</p>
+    </a>  
+  </ng-container>
 
-  <a href="#" class="w-1/3 min-h-[164px] max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100">
-    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Profit & Loss Summary</h5>
-    <p class="font-normal text-gray-700 ">Profit & Loss Summary Data</p>
-  </a>
+  <ng-container *ngIf="showProfitLossCard">
+    <a href="#" class="w-1/3 min-h-[164px] max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100">
+      <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Profit & Loss Summary</h5>
+      <p class="font-normal text-gray-700 ">Profit & Loss Summary Data</p>
+    </a>
+  </ng-container>
   
-  <a href="#" class="w-1/3 min-h-[164px] max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100">
-    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Frequency Summary</h5>
-    <p class="font-normal text-gray-700 ">Frequency Summary Data</p>
-  </a>
+  <ng-container *ngIf="showFrequencyCard">
+    <a href="#" class="w-1/3 min-h-[164px] max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100">
+      <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Frequency Summary</h5>
+      <p class="font-normal text-gray-700 ">Frequency Summary Data</p>
+    </a>
+  </ng-container>
 
-  <a href="#" class="w-1/3 min-h-[164px] max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100">
-    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Trade Summary</h5>
-    <p class="font-normal text-gray-700 ">Trade Summary Data</p>
-  </a>
+  <ng-container *ngIf="showTradeCard">
+    <a href="#" class="w-1/3 min-h-[164px] max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100">
+      <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Trade Summary</h5>
+      <p class="font-normal text-gray-700 ">Trade Summary Data</p>
+    </a>
+  </ng-container>
 
 </section>
 
