Added structural directives and toggle view functionality
1. Added ngFor logic for generating header and columns
2. Added data table for selecting column identifiers
3. Refactored CSS, moved tailwind declarations into the components CSS file

--- a/yield/src/app/app.component.html
+++ b/yield/src/app/app.component.html
@@ -39,6 +39,13 @@
     [showLineChart]="showLineChart"
     [showBarChart]="showBarChart" class=""></app-analytic>
 
+
+  <!-- Section for selecting column headers -->
+  <app-data-select-table
+    [showSelectDataTable]="showSelectDataTable"
+    class=""></app-data-select-table>
+
+    
   <!-- Section for uploading / show after file is uploaded -->
   <app-data-table 
     [showDataTable]="showDataTable"
