--- a/yield/src/app/data-table/data-table.component.css
+++ b/yield/src/app/data-table/data-table.component.css
@@ -14,8 +14,20 @@
   @apply text-xs text-white uppercase tracking-wider bg-[#9DACC6];
 }
 
+.table-trade-select-label {
+  @apply block mb-2 text-xs text-gray-900 dark:text-white;
+}
+
+.table-trade-select {
+  @apply bg-gray-50 border border-gray-300 text-gray-900 text-xs rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1;
+}
+
 .table-trade-checkbox {
   @apply w-4 h-4 text-blue-600 bg-[#9DACC6] border-gray-300 rounded focus:ring-blue-500 focus:ring-2;
+}
+
+.table-trade-cell-data {
+  @apply px-6 py-1 font-semibold whitespace-nowrap;
 }
 
 .table-trade-edit-btn {
