--- a/yield/src/app/app.component.html
+++ b/yield/src/app/app.component.html
@@ -43,7 +43,8 @@
   <!-- Section for selecting column headers -->
   <app-data-select-table
     [showSelectDataTable]="showSelectDataTable"
-    class=""></app-data-select-table>
+    class="">
+  </app-data-select-table>
 
     
   <!-- Section for uploading / show after file is uploaded -->
