--- a/yield/src/app/data-select-table/data-select-table.component.css
+++ b/yield/src/app/data-select-table/data-select-table.component.css
@@ -1,13 +1,13 @@
 .table-trade {
-  @apply w-[98%] mx-auto text-left text-sm text-gray-800 overflow-hidden;
+  @apply mx-auto text-left text-sm text-gray-800 overflow-hidden;
 }
 
 .table-trade-footer {
-  @apply flex py-2 px-6 justify-end text-sm text-gray-800 hover:opacity-60;
+  @apply w-full py-2 px-6 text-sm text-gray-800 hover:opacity-60;
 }
 
 .table-trade-footer-btn {
-  @apply py-2 px-8 text-white text-xl uppercase bg-[#DEB465];
+  @apply py-2 px-8 text-white text-xl uppercase bg-[#DEB465] rounded-sm items-end justify-end mr-auto;
 }
 
 .table-footer-text {
